--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -141,7 +141,7 @@
     "by sending a one-time password to all addresses associated with this account.": "用于通过向该帐户关联的所有地址发送一次性密码。",
     "send one-time password": "发送一次性密码",
     "skip this with recovery codes": "使用恢复码跳过此步骤",
-    "if you can locate your two-factor recovery codes you can skip this recovery process.": "如果你能找到你的双因素恢复码，你可以跳过这个恢复过程。",
+    "if you can locate your two-factor recovery codes you can skip this recovery process.": "如果您能找到您的双因素恢复码，您可以跳过这个恢复过程。",
     "the file containing your recovery codes may exist on your computer - check  for a file named": "包含恢复码的文件可能存在于您的计算机上——请检查一个名为",
     "enter recovery code": "输入恢复码",
     "sign in to": "登录",
@@ -153,7 +153,7 @@
     "confirm": "确认",
     "remind me later": "稍后提醒我",
     "configured": "已配置",
-    "security keys are hardware devices that can be used as your second factor of authentication.": "安全钥匙是硬件设备，可以作为你的第二认证因素。",
+    "security keys are hardware devices that can be used as your second factor of authentication.": "安全钥匙是硬件设备，可以作为您的第二认证因素。",
     "no security keys": "未配置安全钥匙",
     "not configured": "未配置",
     "no fallback sms number": "未设置备用手机号码",
@@ -229,7 +229,6 @@
     "achievements": "成就",
 
     "__comments-9": "Repository",
-    "archived": "存档",
     "star": "星标",
     "unstar": "取消星标",
     "watch": "关注",
@@ -249,6 +248,8 @@
     "(optional)": "(可选)",
     "public": "公共",
     "private": "私有",
+    "public archive": "公共存档",
+    "private archive": "私有存档",
     "packages": "包",
     "secrets": "密钥",
     "security": "安全",
@@ -278,7 +279,7 @@
     "no releases published": "无发行版",
     "create a new release": "创建发行版",
     "no packages published": "未发布包",
-    "publish your first package": "发布你的第一个包",
+    "publish your first package": "发布您的第一个包",
     "environments": "环境",
     "edit repository details": "编辑仓库详情",
     "website": "网站",
@@ -321,10 +322,10 @@
     "pull request": "拉取请求",
     "compare": "对比",
     "comparing changes": "比对差异",
-    "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，你也可以",
+    "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，您也可以",
     "compare across forks": "跨复刻比较",
     "compare changes": "比对差异",
-    "compare changes across branches, commits, tags, and more below. if you need to, you can also": "比对不同分支、提交、标签等的差异。如果需要，你也可以",
+    "compare changes across branches, commits, tags, and more below. if you need to, you can also": "比对不同分支、提交、标签等的差异。如果需要，您也可以",
     "choose different branches or forks above to discuss and review changes.": "在上方选择其他分支或复刻以讨论和查看更改。",
     "learn about pull requests": "了解拉取请求",
     "create pull request": "创建拉取请求",
@@ -333,12 +334,12 @@
     "commit comments": "评论",
     "allow edits by maintainers": "允许维护者进行编辑",
     "open a pull request": "打开一个拉取请求",
-    "create a new pull request by comparing changes across two branches. if you need to, you can also": "通过比较两个分支之间的更改来创建新的拉取请求。如果需要，你也可以",
+    "create a new pull request by comparing changes across two branches. if you need to, you can also": "通过比较两个分支之间的更改来创建新的拉取请求。如果需要，您也可以",
     "checking mergeability…": "检查可合并性…",
     "able to merge.": "可以合并。",
     "these branches can be automatically merged.": "这些分支可以自动合并。",
     "can’t automatically merge.": "无法自动合并。",
-    "don’t worry, you can still create the pull request.": "别担心，你仍然可以创建拉取请求。",
+    "don’t worry, you can still create the pull request.": "别担心，您仍然可以创建拉取请求。",
     "discuss and review the changes in this comparison with others.": "与他人讨论并回顾此次对比中的变化。",
     "open a pull request that is ready for review": "打开一个拉取请求，以供审查",
     "create draft pull request": "创建拉取请求草案",
@@ -466,7 +467,7 @@
     "commit merge": "提交合并",
     "heads up, this will commit to master.": "注意：将提交至 master",
     "yep, commit updates to the": "是的，提交更新至",
-    "for this commit. Your pull request will be updated automatically.": "为这个提交。你的拉取请求将被自动更新。",
+    "for this commit. Your pull request will be updated automatically.": "为这个提交。您的拉取请求将被自动更新。",
     "i understand, continue updating master": "我明白了，继续更新 master",
 
     "__comments-issue": "Repository Issue",
@@ -517,12 +518,12 @@
     "for security reasons, you cannot change the visibility of a fork.": "出于安全原因，您无法更改复刻仓库的可见性。",
     "change visibility": "更改可见性",
     "warning: this is a potentially destructive action.": "警告：这是一个潜在的破坏性操作。",
-    "this repository is currently public.": "该仓库当前是公开的",
-    "this repository is currently private.": "该仓库当前是私有的",
+    "this repository is currently public.": "该仓库当前是公开的。",
+    "this repository is currently private.": "该仓库当前是私有的。",
     "make this repository visible to anyone.": "让任何人都能看到这个仓库。",
     "make private": "转为私有",
     "hide this repository from the public.": "向公众隐藏这个仓库。",
-    "i understand, change repository visibility.": "我明白了，依然更改仓库的可见性。",
+    "i understand, change repository visibility.": "我明白了，依然更改该仓库的可见性。",
     "transfer ownership": "转让所有权",
     "transfer": "转让",
     "transfer this repository to another user or to an organization where you have the ability to create repositories.": "将此仓库转让给另一位用户或您可以创建仓库的组织。",
@@ -532,27 +533,38 @@
     "in github help.": "在 GitHub 帮助中所示。",
     "transferring may be delayed until the new owner approves the transfer.": "在新所有者批准接受转让之前，转让可能会延迟。",
     "new owner’s github username or organization name": "新所有者的 GitHub 用户名或组织名称",
-    "type ": "请键入",
     "to confirm.": "进行确定。",
-    "i understand, transfer this repository.": "我明白了，依然转让这个仓库。",
-    "archive this repository": "归档该仓库",
+    "i understand, transfer this repository.": "我明白了，依然转让该仓库。",
+    "archive this repository": "归档仓库",
     "mark this repository as archived and read-only.": "将此仓库标记为已存档和只读。",
     "archive repository": "归档仓库",
     "this repository will become read-only.": "该仓库将设置为只读。",
     "you will still be able to fork the repository and unarchive it at any time.": "您仍然可以随时访问复刻仓库并取消存档。",
     "unexpected bad things will happen if you don’t read this!": "如果您不阅读此说明，将会发生意想不到的事情！",
+    "all scheduled workflows will stop running.": "所有预定的工作流程将停止运行。",
+    "before you archive, please consider:": "在您归档之前，请考虑：",
+    "updating any repository settings": "更新仓库设置",
+    "closing all open issues and pull requests": "关闭所有开放的问题和拉取请求",
+    "making a note in your readme": "在您的 README 中做个说明",
     "please type": "请键入",
-    "i understand the consequences, archive this repository": "我明白后果，依然存档这个仓库",
+    "i understand the consequences, archive this repository": "我明白后果，依然存档该仓库",
     "this repository has been archived by the owner. it is now read-only.": "此仓库已由所有者存档。它现在是只读的。",
-    "delete this repository": "删除该仓库",
-    "once you delete a repository, there is no going back. please be certain.": "一旦您删除了仓库，就再也无法恢复了。请确定。",
+    "unarchive this repository": "解除仓库存档",
+    "mark this repository as unarchived and read-write.": "将此仓库标记为未归档和可读写。",
+    "unarchive repository": "解除仓库存档",
+    "this will make": "这将使",
+    "read-write.": "可读写。",
+    "once unarchived, the following can be modified and commented on:": "一旦解除存档，就可以对以下内容进行修改和评论：",
+    "i understand the consequences, unarchive this repository": "我明白后果，依然解除该仓库存档",
+    "delete this repository": "删除仓库",
+    "once you delete a repository, there is no going back. please be certain.": "您一旦删除仓库，将再也无法恢复。请确认。",
     "are you absolutely sure?": "您完全确定吗？",
     "this action": "该操作",
     "cannot": "不能",
     "be undone. this will permanently delete the": "被撤消。这将永久删除",
     "repository, wiki, issues, comments, packages, secrets, workflow runs, and remove all collaborator associations.": "仓库、Wiki、议题、评论、包、机密、工作流程，并删除所有协作者关联。",
     "this will not change your billing plan. if you want to downgrade, you can do so in your billing settings.": "这并不会更改您的结算方案。 如果您想降级，可以在结算设置中进行降级。",
-    "i understand the consequences, delete this repository": "我明白后果，依然删除这个仓库",
+    "i understand the consequences, delete this repository": "我明白后果，依然删除该仓库",
     "manage access": "访问管理",
     "who has access": "谁有权访问",
     "public repository": "公共仓库",
@@ -615,7 +627,7 @@
     "successor settings": "设置继任者",
     "add successor": "添加的继任者",
     "search by username, full name, or email address": "搜索用户名、全名、或邮件地址",
-    "you have not designated a successor": "你还没有指定继承人",
+    "you have not designated a successor": "您还没有指定继承人",
     "delete account": "删除账户",
     "delete your account": "删除帐户",
 
@@ -654,14 +666,14 @@
     "create a repository": "创建一个新仓库",
     "a repository contains all project files, including the revision history. already have a project repository elsewhere?": "仓库包含项目中的所有文件，包括修订历史记录。在其他地方已有仓库？",
     "import a repository.": "导入仓库",
-    "import your project to github": "将你的仓库导入到 GitHub",
+    "import your project to github": "将您的仓库导入到 GitHub",
     "import all the files, including the revision history, from another version control system.": "从其他版本控制系统导入所有文件，包括修订历史记录。",
     "your old repository’s clone url": "您的旧仓库的克隆地址",
     "learn more about the types of": "了解更多关于",
     "supported vcs.": "支持的版本系统",
     "cancel": "取消",
     "begin import": "开始导入",
-    "your new repository details": "你的新仓库详情",
+    "your new repository details": "您的新仓库详情",
     "great repository names are short and memorable. need inspiration? how about": "好的仓库名称应该简单且容易记忆。需要灵感吗？这个怎么样：",
     "anyone on the internet can see this repository. you choose who can commit.": "任何人都可以看到这个仓库，您可以选择谁能提交。",
     "you choose who can see and commit to this repository.": "您可以选择谁可以看和提交到该仓库。",
@@ -963,15 +975,15 @@
     "create dependabot security update": "创建可靠的安全更新",
 
     "__comments-workflows": "workflows",
-    "workflows": "工作流",
-    "new workflow": "新建工作流",
-    "select workflow": "选择工作流",
-    "all workflows": "全部工作流",
-    "showing runs from all workflows": "显示所有工作流的运行情况",
+    "workflows": "工作流程",
+    "new workflow": "新建工作流程",
+    "select workflow": "选择工作流程",
+    "all workflows": "全部工作流程",
+    "showing runs from all workflows": "显示所有工作流程的运行情况",
     "event": "事件",
     "filter by event": "按事件筛选",
     "find an event": "查找事件",
-    "filter workflow runs": "筛选工作流",
+    "filter workflow runs": "筛选工作流程",
     "narrow your search": "缩小搜索范围",
     "filter by status": "按状态筛选",
     "find a status": "查找状态",
@@ -988,22 +1000,22 @@
     "skipped": "跳过",
     "stale": "陈旧",
     "summary": "摘要",
-    "workflow file": "工作流文件",
+    "workflow file": "工作流程文件",
     "jobs": "工作",
     "triggered via issues": "通过议题触发",
     "total duration": "总时长",
     "billable time": "计费时间",
     "artifacts": "附件",
     "the logs for this run have expired and are no longer available.": "此运行日志已过期，不再可用。",
-    "view workflow file": "查看工作流文件",
-    "view workflow runs": "查看工作流运行",
+    "view workflow file": "查看工作流程文件",
+    "view workflow runs": "查看工作流程运行",
     "create status badge": "创建状态徽章",
     "delete all logs": "删除所有日志",
-    "delete workflow run": "删除工作流运行",
+    "delete workflow run": "删除工作流程运行",
 
     "start commit": "开始提交",
 
-    "view runs": "查看工作流",
+    "view runs": "查看工作流程",
 
     "no results matched your search.": "没有与您的搜索相符的结果。",
     "try broadening your search filters.": "尝试扩大您的搜索过滤器。",
@@ -1022,7 +1034,7 @@
     "this is a draft and won’t be seen by the public unless it’s published.": "这是一个草案，除非发布，否则不会被公众看到。",
     "choose an existing tag, or create a new tag on publish": "选择一个现有的标签，或在发布时创建一个新标签",
     "existing tag": "现有标签",
-    "excellent! this tag will be created from the target when you publish this release.": "优秀! 当你发布这个版本时，这个标签将从目标创建。",
+    "excellent! this tag will be created from the target when you publish this release.": "优秀! 当您发布这个版本时，这个标签将从目标创建。",
     "publish release": "发布发行版",
     "edit release": "编辑发行版",
     "notes": "笔记",
@@ -1039,7 +1051,7 @@
 
     "choose a tag to compare": "选择一个标签进行比较",
 
-    "are you sure?": "你确定哇?",
+    "are you sure?": "您确定哇?",
     "this will delete the information for this release.": "这将会删除该发行版的信息。",
     "delete this release": "删除发行版",
     "this will delete the information for this draft.": "这将会删除该草案的信息。",
