合并自 #24 ltxhhz/master 新关键词

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -184,6 +184,9 @@
     "overview": "概况",
     "repositories": "仓库",
     "projects": "项目",
+    "customize your pins": "自定义您的嵌入项目",
+    "contribution settings": "贡献设置",
+    "learn how we count contributions": "了解我们如何计算贡献",
     "recent activity": "最近动态",
     "all activity": "所有动态",
     "loading activity...": "加载动态中...",
@@ -207,9 +210,15 @@
     "sort by": "排序方式",
     "find a repository…": "搜索项目…",
     "search or jump to…": "搜索或跳转到…",
+    "best match": "最佳匹配",
+    "most stars": "最多星标",
+    "fewest stars": "最少星标",
+    "most forks": "最多复刻",
+    "fewest forks": "最少复刻",
 
     "__comments-8": "User & Organization",
     "pinned": "置顶",
+    "follower": "粉丝",
     "followers": "粉丝",
     "following": "关注",
     "edit profile": "编辑个人资料",
@@ -251,6 +260,8 @@
     "public archive": "公共存档",
     "private archive": "私有存档",
     "packages": "包",
+    "environments": "环境",
+    "active": "已激活",
     "secrets": "密钥",
     "security": "安全",
     "notifications": "通知",
@@ -262,6 +273,7 @@
     "actions": "操作",
     "release": "发行版",
     "releases": "发行版",
+    "latest": "最新",
     "add file": "添加文件",
     "create new file": "新建文件",
     "upload files": "上传文件",
@@ -280,7 +292,6 @@
     "create a new release": "创建发行版",
     "no packages published": "未发布包",
     "publish your first package": "发布您的第一个包",
-    "environments": "环境",
     "edit repository details": "编辑仓库详情",
     "website": "网站",
     "topics": "话题",
@@ -301,6 +312,12 @@
     "download zip": "下载 Zip 压缩包",
     "this repository": "该仓库",
     "forked from": "复刻自",
+    "owns this repository": "拥有这个仓库",
+    "suggested:": "建议：",
+    "save changes": "保存更改",
+    "your repository details have been saved.": "您的仓库详细信息已保存。",
+    "committed to this repository in the past day": "过去一天致力于此仓库",
+    "committed to this repository in the past week": "过去一周致力于此仓库",
 
     "contribute": "贡献",
     "open a pull request to contribute your changes upstream.": "打开拉取请求以向上游贡献您的更改。",
@@ -438,6 +455,12 @@
     "squash and merge": "压缩与合并",
     "rebase and merge": "变基与合并",
 
+    "learn more about pull requests": "了解有关拉取请求的更多信息",
+    "dismiss for this repository only": "仅在此仓库关闭",
+    "dismiss for all repositories": "在所有仓库关闭",
+    "there aren’t any open pull requests.": "没有任何开放的拉取请求。",
+    "no results matched your search.": "没有与您的搜索相符的结果。",
+
     "this pull request is still a work in progress": "这个拉取请求仍然是一项正在进行的工作",
     "draft pull requests cannot be merged.": "拉取请求草案不能被合并。",
 
@@ -479,16 +502,35 @@
     "labels": "标签",
     "label": "标签",
     "filter by label": "按标签筛选",
+    "filter labels": "过滤标签",
+    "unlabeled": "没标签的",
     "filter by project": "按项目筛选",
+    "filter projects": "过滤项目",
     "milestones": "里程碑",
     "milestone": "里程碑",
     "filter by milestone": "按里程碑筛选",
-    "reviews": "审核",
-    "filter by reviews": "按审核筛选",
-    "assignee": "受理人",
-    "assignees": "受理人",
-    "filter by who’s assigned": "按受理人筛选",
+    "filter milestones": "过滤里程碑",
+    "issues with no milestone": "没有里程碑的议题",
     "sort": "排序",
+    "sort by": "排序方式",
+    "newest": "最新的",
+    "oldest": "最旧的",
+    "most commented": "评论最多的",
+    "least commented": "评论最少的",
+    "most reactions": "反应最多",
+    "reviews": "审查",
+    "filter by reviews": "按审查筛选",
+    "no reviews": "没审查",
+    "review required": "需要审查",
+    "approved review": "批准审查",
+    "reviewed by you": "由您审查",
+    "awaiting review from you": "等待您审查",
+    "not reviewed by you": "未由您审查",
+    "assignee": "受理人",
+    "assigned to nobody": "没分配给任何人",
+    "filter users": "过滤用户",
+    "filter by who’s assigned": "按受理人筛选",
+    "assignees": "受理人",
     "confirmed": "已确认",
     "we couldn’t find anything!": "这里空空如也！",
     "linked pull requests": "关联拉取请求",
@@ -501,7 +543,9 @@
     "lock conversation": "锁定对话",
     "pin issue": "固定议题",
     "transfer issue": "转移议题",
-    "delete issue": "刪除议题",
+    "welcome to issues!": "欢迎关注议题！",
+    "clear current search query, filters, and sorts": "清除当前的搜索查询、过滤器和排序",
+    "delete issue": "删除议题",
     "are you sure you want to delete this issue?": "您确定要删除此议题吗？",
     "this cannot be undone": "这不能被撤消",
     "only administrators can delete issues": "只有管理员可以删除议题",
@@ -509,6 +553,31 @@
     "delete this issue": "删除议题",
     "deleting issue…": "议题删除中…",
     "the issue was successfully deleted.": "该议题已成功删除。",
+
+    "filter issues": "过滤议题",
+    "open issues and pull requests": "开放的议题和拉取请求",
+    "your issues": "您的议题",
+    "your pull requests": "您的拉取请求",
+    "everything assigned to you": "所有分配给您的",
+    "everything mentioning you": "所有提到您的",
+    "view advanced search syntax": "查看高级搜索语法",
+    "label issues and pull requests for new contributors": "为新贡献者标记议题和拉取请求",
+    "issues are used to track todos, bugs, feature requests, and more. as issues are created, they’ll appear here in a searchable and filterable list. to get started, you should": "议题用于跟踪待办事项、错误、功能请求等。创建议题后，它们将显示在可搜索和可过滤的列表中。如果要开始，您应该",
+    "create an issue": "创建一个议题",
+    "something isn't working": "某些不能正常工作的问题",
+    "improvements or additions to documentation": "文档的改进或补充",
+    "this issue or pull request already exists": "此问题或拉取请求已存在",
+    "new feature or request": "新功能或请求",
+    "good for newcomers": "适合新人",
+    "extra attention is needed": "需要额外注意",
+    "this doesn't seem right": "这似乎不对",
+    "further information is requested": "要求提供更多信息",
+    "this will not be worked on": "这将不会被处理",
+    "alphabetically": "按字母顺序",
+    "reverse alphabetically": "按字母顺序倒序",
+    "most issues": "议题最多",
+    "fewest issues": "议题最少",
+    "search all labels": "搜索所有标签",
 
     "__comments-10": "Repository settings",
     "danger zone": "危险区",
@@ -661,6 +730,55 @@
     "recovery tokens": "恢复令牌",
     "sessions": "会话",
     "see more": "查看更多",
+
+    "template repository": "模板库",
+    "template repositories let users generate new repositories with the same directory structure and files.": "模板仓库允许用户生成具有相同目录结构和文件的新仓库。",
+    "social preview": "社交预览",
+    "upload an image to customize your repository’s social media preview.": "上传图像以自定义仓库的社交媒体预览。",
+    "images should be at least 640×320px (1280×640px for best display).": "图片至少应为 640×320 像素（1280×640 像素以获得最佳显示效果）。",
+    "download template": "下载模板",
+    "features": "功能",
+    "restrict editing to collaborators only": "仅限协作者进行编辑",
+    "public wikis will still be readable by everyone.": "公共wikis仍然可供所有人阅读。",
+    "issues integrate lightweight task tracking into your repository. keep projects on track with issue labels and milestones, and reference them in commit messages.": "问题将轻量级任务跟踪集成到您的仓库中。使用问题标签和里程碑保持项目正常运行，并在提交消息中引用它们。",
+    "get organized with issue templates": "使用问题模板进行组织",
+    "give contributors issue templates that help you cut through the noise and help them push your project forward.": "为贡献者提供问题模板，帮助您消除干扰并帮助他们推进您的项目。",
+    "set up templates": "设置模板",
+    "sponsorships": "赞助",
+    "sponsorships help your community know how to financially support this repository.": "赞助可帮助您的社区了解如何在财务上支持此仓库。",
+    "display a \"sponsor\" button": "显示“赞助商”按钮",
+    "add links to github sponsors or third-party methods your repository accepts for financial contributions to your project.": "添加指向 GitHub 赞助商或您的仓库接受的第三方方法的链接，以对您的项目进行财务贡献。",
+    "set up sponsor button": "设置赞助商按钮",
+    "project boards on github help you organize and prioritize your work. you can create project boards for specific feature work, comprehensive roadmaps, or even release checklists.": "GitHub 上的项目板帮助您组织工作和排列工作的优先级。 您可以为特定功能工作、全面的路线图甚至发布检查列表创建项目板。",
+    "preserve this repository": "保留这个仓库",
+    "include this code in the": "将此代码包含在",
+    "github archive program": "GitHub 存档计划中",
+    "table of contents": "目录",
+    "autogenerate table of contents for markdown files in this repository. the table of contents will be displayed near the top of the file.": "自动生成此仓库中 Markdown 文件的目录。目录将显示在文件顶部附近。",
+    "discussions is the space for your community to have conversations, ask questions and post answers without opening issues.": "讨论是您的社区进行对话、提问和发布答案而无需通过开放议题的地方。",
+    "get started with discussions": "开始讨论",
+    "engage your community by having discussions right in your repository, where your community already lives": "通过在您的社区已经存在的仓库中进行讨论来吸引您的社区",
+    "set up discussions": "建立讨论",
+    "merge button": "合并按钮",
+    "when merging pull requests, you can allow any combination of merge commits, squashing, or rebasing. at least one option must be enabled. if you have linear history requirement enabled on any protected branch, you must enable squashing or rebasing.": "合并拉取请求时，您可以允许合并提交、压缩或变基的任意组合。必须至少启用一个选项。如果您在任何受保护分支上启用了线性历史要求，则必须启用压缩或变基。",
+    "allow merge commits": "允许提交合并",
+    "add all commits from the head branch to the base branch with a merge commit.": "使用合并提交将所有从头部分支的提交添加到基础分支。",
+    "allow squash merging": "允许压缩合并",
+    "combine all commits from the head branch into a single commit in the base branch.": "将来自头部分支的所有提交合并到基础分支中的单个提交中。",
+    "allow rebase merging": "允许变基合并",
+    "add all commits from the head branch onto the base branch individually.": "将来自头部分支的所有提交单独添加到基础分支。",
+    "you can allow setting pull requests to merge automatically once all required reviews and status checks have passed.": "一旦所有必需的审查和状态检查都通过，您可以允许设置拉取请求自动合并。",
+    "allow auto-merge": "允许自动合并",
+    "waits for merge requirements to be met and then merges automatically.": "等待满足合并要求，然后自动合并。",
+    "after pull requests are merged, you can have head branches deleted automatically.": "合并拉取请求后，您可以自动删除头部分支。",
+    "automatically delete head branches": "自动删除头部分支",
+    "deleted branches will still be able to be restored.": "删除的分支仍然可以恢复。",
+    "archives": "档案",
+    "when creating source code archives, you can choose to include files stored using git lfs in the archive.": "创建源代码存档时，您可以选择在存档中包含使用 Git LFS 存储的文件。",
+    "include git lfs objects in archives": "在档案中包含 Git LFS 对象",
+    "git lfs usage in archives is billed at the same rate as usage with the client.": "归档中的 Git LFS 使用率与客户端的使用率相同。",
+    "pages settings now has its own dedicated tab!": "Pages 设置现在有其专用选项卡！",
+    "check it out here!": "看看这里！",
 
     "__comments-12": "Create a Repository",
     "create a repository": "创建一个新仓库",
@@ -842,7 +960,7 @@
     "delete revision from history": "从历史记录中删除修订",
     "this edit’s content will no longer be visible": "此修改的内容将不再可见",
 
-    "__comments-16": "Notification",
+    "__comments-17": "Notification",
     "inbox": "收件箱",
     "saved": "已保存",
     "save": "保存",
@@ -860,7 +978,7 @@
     "mark as unread": "标记为未读",
     "clear out the clutter.": "清除混乱。",
     "get the most out of your new inbox by quickly and easily marking all of your previously read notifications as done.": "快速轻松地将所有已阅读的通知标记为已完成，以充分利用新的收件箱。",
-    "overwhelmed by notifications? we've found some repositories that may be causing notifications you don't need.": "通知不知所措？我们发现了一些仓库，这些存储库可能会导致您不需要的通知。",
+    "overwhelmed by notifications? we've found some repositories that may be causing notifications you don't need.": "通知不知所措？我们发现了一些仓库，这些仓库可能会导致您不需要的通知。",
     "update watching settings": "更新关注设置",
     "select all": "全选",
     "manage notifications": "管理通知",
@@ -899,7 +1017,16 @@
     "sudo mode": "sudo 模式",
     ". we won’t ask for your password again for a few hours.": " 。我们将在未来几个小时内不再要求您输入密码。",
 
+    "__comments-18": "deployments",
+    "deployed to github-pages": "部署到 github-pages",
+    "view deployment": "查看部署",
+    "activity log": "活动记录",
+    "view full activity log": "查看完整的活动记录",
+    "show:": "显示:",
+    "all environments": "所有环境",
+
     "__comments-advanced-search": "Advanced search",
+    "you could try an": "您可以尝试",
     "advanced search": "高级搜索",
     "search": "搜索",
     "advanced options": "高级选项",
@@ -1080,7 +1207,6 @@
 
 
     "file successfully deleted.": "文件已成功删除。",
-    "active": "激活",
     "abandoned": "废弃",
 
     "organization permissions": "组织权限",
