--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -366,6 +366,8 @@
     "reviewers": "审核人",
     "still in progress?": "仍在进行中吗？",
     "convert to draft": "设置为草案",
+    "convert this pull request to draft?": "将此拉取请求转换为草案？",
+    "people who are already subscribed will not be unsubscribed.": "已经订阅的人将不会被取消订阅。",
     "linked issues": "关联议题",
     "participant": "参与者",
     "participants": "参与者",
@@ -443,7 +445,7 @@
     "marked pull request as ready for review.":"已将此拉取请求标记为准备审查。",
     "checking for ability to merge automatically…": "检测自动合并的能力…",
     "hang in there while we check the branch’s status.": "请等待，我们正在检查该分支的状态",
-    "this branch has no conflicts with the base branch": "该分支与基本分支没有冲突",
+    "this branch has no conflicts with the base branch": "该分支与基础分支没有冲突",
     "merging can be performed automatically.": "可以自动进行合并。",
     "confirm merge": "确认合并",
     "merging…": "合并中…",
@@ -520,14 +522,14 @@
     "most reactions": "反应最多",
     "reviews": "审查",
     "filter by reviews": "按审查筛选",
-    "no reviews": "没审查",
+    "no reviews": "未经审查",
     "review required": "需要审查",
     "approved review": "批准审查",
-    "reviewed by you": "由您审查",
+    "reviewed by you": "经您审查",
     "awaiting review from you": "等待您审查",
-    "not reviewed by you": "未由您审查",
+    "not reviewed by you": "未经您审查",
     "assignee": "受理人",
-    "assigned to nobody": "没分配给任何人",
+    "assigned to nobody": "未分配给任何人",
     "filter users": "过滤用户",
     "filter by who’s assigned": "按受理人筛选",
     "assignees": "受理人",
@@ -739,7 +741,7 @@
     "download template": "下载模板",
     "features": "功能",
     "restrict editing to collaborators only": "仅限协作者进行编辑",
-    "public wikis will still be readable by everyone.": "公共wikis仍然可供所有人阅读。",
+    "public wikis will still be readable by everyone.": "公共 wikis 仍然可供所有人阅读。",
     "issues integrate lightweight task tracking into your repository. keep projects on track with issue labels and milestones, and reference them in commit messages.": "问题将轻量级任务跟踪集成到您的仓库中。使用问题标签和里程碑保持项目正常运行，并在提交消息中引用它们。",
     "get organized with issue templates": "使用问题模板进行组织",
     "give contributors issue templates that help you cut through the noise and help them push your project forward.": "为贡献者提供问题模板，帮助您消除干扰并帮助他们推进您的项目。",
@@ -1214,6 +1216,7 @@
     "browse your starred repositories and topics": "浏览我的标星仓库和话题",
 
     "view all repositories": "查看所有仓库",
+    "this commit does not belong to any branch on this repository, and may belong to a fork outside of the repository.": "这个提交不属于本仓库的任何分支，可能属于仓库以外的分支。",
 
     "__dict-end": "end"
   }
