账户安全相关词条
 `账号`--> `账户`

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -97,7 +97,7 @@
     "username or email address": "用户名或邮箱",
     "forgot password?": "忘记密码？",
     "new to github?": "初次接触 GitHub？",
-    "create an account": "新建账号",
+    "create an account": "新建账户",
     "make sure it's ": "确保",
     "at least 15 characters": "至少需要15个字符",
     "or": " 或者",
@@ -655,9 +655,9 @@
     "your personal account": "我的个人账户",
     "account settings": "账户设置",
     "profile": "个人资料",
-    "account": "账号",
+    "account": "账户",
     "appearance": "外观",
-    "account security": "账号安全",
+    "account security": "账户安全",
     "billing & plans": "计费 & 计划",
     "security log": "安全日志",
     "security & analysis": "安全 & 分析",
@@ -713,8 +713,10 @@
     "change password": "更改密码",
     "old password": "旧密码",
     "new password": "新密码",
-    "update password": "更新密码",
     "confirm new password": "确认新密码",
+    "make sure it's": "请确保",
+    "update password": "更新密码",
+    "i forgot my password": "我忘记了我的密码",
     "two-factor authentication": "双因素身份验证",
     "enable": "启用",
     "enabled": "启用",
@@ -722,15 +724,22 @@
     "add": "添加",
     "added": "添加",
     "two-factor methods": "双因素验证方式",
+    "two-factor authentication adds an additional layer of security to your account by requiring more than just a password to sign in.": "双因素身份验证不仅仅要求密码登录，还为您的账户增加了一层额外的安全性。",
     "authenticator app": "身份验证器应用",
     "security keys": "安全钥匙",
+    "security keys are hardware devices that can be used as your second factor of authentication.": "安全钥匙是硬件设备，可以作为您的第二认证因素。",
     "sms number": "手机号码",
     "recovery options": "恢复选项",
     "recovery codes": "恢复码",
+    "recovery codes can be used to access your account in the event you lose access to your device and cannot receive two-factor authentication codes.": "恢复码可用于在您无法访问设备且无法接收双因素身份验证代码的情况下访问您的帐户。",
     "show": "显示",
     "fallback sms number": "备用手机号码",
+    "providing a fallback sms number will allow github to send your two-factor authentication codes to an alternate device if you lose your primary device.": "如果您丢失主要设备，提供备用手机号码将允许 GitHub 将您的双因素身份验证代码发送到备用设备。",
     "recovery tokens": "恢复令牌",
+    "account recovery with facebook is a simple way to recover your account.": "使用 Facebook 恢复帐户是一种恢复帐户的简单方法。",
+
     "sessions": "会话",
+    "this is a list of devices that have logged into your account. revoke any sessions that you do not recognize.": "这是已登录您帐户的设备列表。 撤销任何您不认识的会话。",
     "see more": "查看更多",
 
     "template repository": "模板库",
