词典：主题设置

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -684,6 +684,7 @@
     "company": "公司",
     "location": "位置",
     "profile picture": "个人头像",
+    "update profile": "更新个人信息",
     "profile settings": "配置文件设置",
     "display pro badge": "显示 Pro 徽章",
     "contributions": "贡献",
@@ -702,13 +703,24 @@
     "delete account": "删除账户",
     "delete your account": "删除帐户",
 
-    "theme": "主题",
-    "go to your personal profile": "去我的个人资料",
-    "default to system": "系统默认",
-    "light": "亮",
-    "dark": "暗",
-    "preferred default emoji skin tone": "默认的表情肤色",
-    "update preference": "更新我的偏好",
+    "theme preferences": "主题偏好",
+    "choose how github looks to you. select a single theme, or sync with your system and automatically switch between day and night themes.": "选择 GitHub 在你眼中的样子。选择单一主题，或与您的系统同步并自动在白天和夜晚的主题之间切换。",
+    "theme mode": "主题模式",
+    "single theme": "单一主题",
+    "github will use your selected theme": "GitHub 将使用你选择的主题",
+    "sync with system": "与系统同步",
+    "github theme will match your system active settings": "GitHub 主题将匹配您的系统设置",
+    "default light": "默认 - 亮",
+    "default dark": "默认 - 暗",
+    "dark dimmed": "昏暗",
+    "dark high contrast": "高对比暗",
+    "day theme": "日间主题",
+    "night theme": "夜间主题",
+    "this theme will be active when your system is set to “light mode”": "当您的系统设置为“灯光模式”时，该主题将被激活。",
+    "this theme will be active when your system is set to “dark mode”": "当您的系统设置为“暗夜模式”时，该主题将被激活。",
+
+    "emoji skin tone preference": "表情符号肤色偏好",
+    "preferred default emoji skin tone": "默认的表情符号肤色",
 
     "change password": "更改密码",
     "old password": "旧密码",
