--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -803,6 +803,28 @@
     "pages settings now has its own dedicated tab!": "Pages 设置现在有其专用选项卡！",
     "check it out here!": "看看这里！",
 
+    "is designed to host your personal, organization, or project pages from a github repository.": "旨在从 GitHub 仓库托管您的个人、组织或项目页面。",
+    "your site is published at": "您的站点发布在",
+    "source": "来源",
+    "github pages is currently disabled. select a source below to enable github pages for this repository.": "GitHub Pages 目前已被禁用。在下面选择一个源，为该仓库启用 GitHub Pages。",
+    "your github pages site is currently being built from the": "您的 GitHub Pages 站点，目前正建立于",
+    "none": "无",
+    "select branch": "选择分支",
+    "branch:": "分支:",
+    "select folder": "选择文件夹",
+    "theme chooser": "设置主题",
+    "select a theme to publish your site with a jekyll theme using the": "选择一个主题，用 jekyll 主题发布您的站点，使用",
+    "select a theme to publish your site with a jekyll theme.": "选择一个主题，用 Jekyll 主题发布您的站点。",
+    "choose a theme": "选择一个主题",
+    "hide thumbnails": "隐藏缩略图",
+    "select theme": "选择主题",
+    "custom domain": "自定义域",
+    "custom domains allow you to serve your site from a domain other than": "自定义域允许您从其他域为您的站点提供服务，而不是",
+    "remove": "移除",
+    "enforce https": "强制执行 HTTPS ",
+    "https provides a layer of encryption that prevents others from snooping on or tampering with traffic to your site.": "HTTPS 提供了一个加密层，防止他人窥探或篡改您站点的流量。",
+    "when https is enforced, your site will only be served over https.": "当 HTTPS 被强制执行时，您的站点将只通过 HTTPS 提供服务。",
+
     "__comments-Personal access tokens": "个人访问令牌",
     "personal access tokens": "个人访问令牌",
     "generate new token": "生成新令牌",
