词典：其他零散设置

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -62,8 +62,11 @@
     "search github": "搜索 GitHub",
     "why github?": "为何选择 GitHub？",
     "built for developers": "专为开发者打造",
+    "email address": "电子邮箱地址",
+    "sign up for github": "注册 GitHub",
     "refresh": "刷新",
     "developers": "开发者",
+    "fortune 50": "财富 50 强",
     "spoken language:": "自然语言",
     "any": "所有",
     "date range:": "时间范围",
@@ -227,8 +230,13 @@
     "type": "类型",
     "all": "所有",
     "select type": "选择类型",
+    "sources": "源码",
+    "archived": "存档",
+    "mirrors": "镜像",
     "select language": "选择语言",
     "select order": "选择排序",
+    "last updated": "最近更新",
+    "clear filter": "清除筛选器",
     "sort by": "排序方式",
     "find a repository…": "搜索项目…",
     "search or jump to…": "搜索或跳转到…",
@@ -363,11 +371,22 @@
     "comparing changes": "比对差异",
     "choose two branches to see what’s changed or to start a new pull request. if you need to, you can also": "选择两个分支以比较差异或启动新的拉取请求。如果需要，您也可以",
     "compare across forks": "跨复刻比较",
+    "base repository:": "基础仓库：",
+    "choose a base repository": "选择基础仓库",
+    "filter repos": "筛选仓库",
+    "head repository:": "头部仓库：",
+    "choose a head repository": "选择头部仓库",
+    "base:": "基础：",
+    "choose a base ref": "选择一个基础引用",
+    "compare:": "对比：",
     "compare changes": "比对差异",
     "compare changes across branches, commits, tags, and more below. if you need to, you can also": "比对不同分支、提交、标签等的差异。如果需要，您也可以",
     "choose different branches or forks above to discuss and review changes.": "在上方选择其他分支或复刻以讨论和查看更改。",
     "learn about pull requests": "了解拉取请求",
     "create pull request": "创建拉取请求",
+    "compare and review just about anything": "比较和审查几乎任何东西",
+    "branches, tags, commit ranges, and time ranges. in the same repository and across forks.": "分支、标签、提交范围和时间范围。 在同一个仓库中并跨分支。",
+
     "comments": "评论",
     "files changed": "文件变更",
     "commit comments": "评论",
@@ -604,6 +623,7 @@
     "search all labels": "搜索所有标签",
 
     "__comments-10": "Repository settings",
+    "most repository settings are hidden for archived repositories. this repository must be unarchived to change them.": "对于存档的仓库，大多数仓库设置都是隐藏的。 必须解除仓库存档才能更改它们。",
     "danger zone": "危险区",
     "change repository visibility": "更改仓库可见性",
     "you cannot change the visibility of a fork. please": "您无法更改复刻仓库的可见性。请",
@@ -626,6 +646,7 @@
     "in github help.": "在 GitHub 帮助中所示。",
     "transferring may be delayed until the new owner approves the transfer.": "在新所有者批准接受转让之前，转让可能会延迟。",
     "new owner’s github username or organization name": "新所有者的 GitHub 用户名或组织名称",
+    "username or organization name": "用户名或组织名称",
     "to confirm.": "进行确定。",
     "i understand, transfer this repository.": "我明白了，依然转让该仓库。",
     "archive this repository": "归档仓库",
@@ -635,6 +656,8 @@
     "you will still be able to fork the repository and unarchive it at any time.": "您仍然可以随时访问复刻仓库并取消存档。",
     "unexpected bad things will happen if you don’t read this!": "如果您不阅读此说明，将会发生意想不到的事情！",
     "all scheduled workflows will stop running.": "所有预定的工作流程将停止运行。",
+    "security features will be unavailable:": "安全功能将无法使用：",
+    "code scanning": "代码扫描",
     "before you archive, please consider:": "在您归档之前，请考虑：",
     "updating any repository settings": "更新仓库设置",
     "closing all open issues and pull requests": "关闭所有开放的问题和拉取请求",
@@ -648,6 +671,7 @@
     "this will make": "这将使",
     "read-write.": "可读写。",
     "once unarchived, the following can be modified and commented on:": "一旦解除存档，就可以对以下内容进行修改和评论：",
+    "security features will become available:": "安全功能将不可用：",
     "i understand the consequences, unarchive this repository": "我明白后果，依然解除该仓库存档",
     "delete this repository": "删除仓库",
     "once you delete a repository, there is no going back. please be certain.": "您一旦删除仓库，将再也无法恢复。请确认。",
@@ -675,6 +699,7 @@
     "__comments-11": "Github settings",
     "settings": "设置",
     "your personal account": "我的个人账户",
+    "go to your personal profile": "去我的个人资料",
     "account settings": "账户设置",
     "profile": "个人资料",
     "account": "账户",
@@ -683,6 +708,7 @@
     "billing & plans": "计费 & 计划",
     "security log": "安全日志",
     "security & analysis": "安全 & 分析",
+    "sponsorship log": "赞助日志",
     "emails": "电子邮箱",
     "billing": "账单",
     "ssh and gpg keys": "SSH 与 GPG 公钥",
@@ -774,6 +800,8 @@
     "sessions": "会话",
     "this is a list of devices that have logged into your account. revoke any sessions that you do not recognize.": "这是已登录您帐户的设备列表。 撤销任何您不认识的会话。",
     "see more": "查看更多",
+    "session details": "会话详情",
+    "view all sessions": "查看所有会话",
 
     "template repository": "模板库",
     "template repositories let users generate new repositories with the same directory structure and files.": "模板仓库允许用户生成具有相同目录结构和文件的新仓库。",
@@ -1041,6 +1069,12 @@
     "view fork": "浏览复刻",
 
     "__comments-15": "File code browsing and editing",
+    "jump to": "跳转到",
+    "code definitions": "代码定义",
+    "filter definitions": "筛选定义",
+    "no definitions found in this file.": "本文件中没有发现任何定义。",
+    "code navigation not available for this commit": "该提交的代码导航不可用",
+    "code navigation index up-to-date": "代码导航索引最新",
     "go to line": "跳转到行",
     "go to definition": "跳转到定义",
     "copy path": "复制路径",
@@ -1226,6 +1260,7 @@
     "view security advisories for this repository": "查看此仓库的安全公告",
     "dependabot alerts": "Dependabot 警报",
     "get notified when one of your dependencies has a vulnerability": "当您的一个依赖项存在漏洞时得到通知",
+    "enable dependabot alerts": "启用 Dependabot 警报",
     "view dependabot alerts": "查看 Dependabot 警报",
     "code scanning alerts": "代码扫描警报",
     "automatically detect common vulnerability and coding errors": "自动检测常见漏洞和编码错误",
